[package]
name = "cairo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
png = "*"
num = "*"
itertools = "*"
imgref = "*"
rgb = "*"

[dependencies.gifski]
version = "*"

[dependencies.cairo-rs]
version = "*"
features = [ "png" ]

[dependencies.clap]
version = "*"
features = [ "derive" ]
